change in  all images to link

--- a/electric-testing.html
+++ b/electric-testing.html
@@ -151,7 +151,7 @@ backdrop-filter: blur(8px);
 </nav>
 
 <section class="text-white text-center position-relative gradient-bg d-flex align-items-center justify-content-center"
-         style="background-image: url('/images/electric%20testing.png'); background-size: cover; background-position: center -600px; background-repeat: no-repeat; min-height: 600px;">
+         style="background-image: url('https://shabasthecoder.github.io/futorion-website//images/electric%20testing.png'); background-size: cover; background-position: center -600px; background-repeat: no-repeat; min-height: 600px;">
   <div class="container py-5">
     <h1 class="display-4 fw-bold">In House <span class="gradient-text d-block">Electrical Testing</span></h1>
     <p class="lead mt-3 mb-4">Electrical testing is the process of verifying the performance, safety, and reliability of electrical systems and components.</p>
