--- a/inhouse.html
+++ b/inhouse.html
@@ -153,7 +153,7 @@
 </nav>
 <!-- Hero Section -->
 <section class="text-white text-center position-relative gradient-bg" 
-         style="background-image: url('/images/servic image 2.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
+         style="background-image: url('https://shabasthecoder.github.io/futorion-website//images/servic%20image%202.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
   <div class="container py-5">
     <h1 class="display-4 fw-bold">In House <span class="gradient-text d-block">Mechine Shop</span></h1>
     <p class="lead mt-3 mb-4"> We are experts in three-phase electric motor overhaul, single-phase motor repair, maintenance, and rewinding.</p>
