--- a/dynamic-balancing.html
+++ b/dynamic-balancing.html
@@ -187,7 +187,7 @@
 </nav>
 <!-- Hero Section -->
 <section class="text-white text-center position-relative gradient-bg" 
-         style="background-image: url('/images/dynamic.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
+         style="background-image: url('https://shabasthecoder.github.io/futorion-website//images/dynamic.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
   <div class="container">
     <h1 class="display-4 fw-bold">In House <span class="gradient-text d-block">Dynamic Balancing</span></h1>
     <p class="lead mt-3 mb-4"> Dynamic balancing service is a process that involves reducing or eliminating vibrations in rotating machinery or equipment.</p>
