--- a/modifications.html
+++ b/modifications.html
@@ -153,7 +153,7 @@
 </nav>
 <!-- Hero Section -->
 <section class="text-white text-center position-relative gradient-bg" 
-         style="background-image: url('/images/trouble\ shooting.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
+         style="background-image: url('https://shabasthecoder.github.io/futorion-website//images/trouble\ shooting.png'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 600px;">
   <div class="container">
     <h1 class="display-4 fw-bold">Electrical & Mechanical Repair and<span class="gradient-text d-block"> Modification </span></h1>
     <p class="lead mt-3 mb-4"> Dynamic balancing service is a process that involves reducing or eliminating vibrations in rotating machinery or equipment.</p>
