change in  navbar toggle

--- a/electric-testing.html
+++ b/electric-testing.html
@@ -35,15 +35,15 @@
         padding-bottom: 3rem !important;
       }
     }
-    .nv-bg .nav-link,
-.nv-bg .navbar-brand,
-.nv-bg .dropdown-toggle {
+    .nv-bg .dropdown-item {
   color: white !important;
 }
 
-.nv-bg .nav-link:hover,
-.nv-bg .dropdown-item:hover {
-  color: #00C2FF !important; /* Optional hover color (gold) */
+.nv-bg .dropdown-item:hover,
+.nv-bg .dropdown-item:focus,
+.nv-bg .dropdown-item:active {
+  background-color: #00C2FF !important;
+  color: white !important;
 }
 
 .nv-bg .dropdown-menu {
