--- a/industrial-water-pumps.html
+++ b/industrial-water-pumps.html
@@ -235,7 +235,7 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg pl-3 nv-bg" style="background-color: ##020f3b;">
+<nav class="navbar navbar-expand-lg pl-3 nv-bg" style="background-color: #020f3b;">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" alt="FUTURION logo" style="height: 40px;">
   </a>
