IndustrialValves and ElectricalProducts

--- a/industrial-valves.html
+++ b/industrial-valves.html
@@ -132,8 +132,8 @@
   .filter-btn {
     cursor: pointer;
     border: none;
-    background-color: #e9ecef;
-    color: #000;
+    background-color: #9fcfff;
+    color: #000749;
     margin: 0.3rem;
     border-radius: 0.25rem;
     transition: all 0.3s ease;
@@ -1232,8 +1232,125 @@ Class Rating: 150CL ~ 4500CL
 </section>
 
 <section class="py-0 valve-section" id="Isolation-valves" style="display:none;">
-  <h3>Isolation Valves</h3>
-  <p>Content for Isolation Valves...</p>
+  <div class="container">
+    <div class="text-center mb-5 ">
+      <h2 class="text-center font-weight-bold text-dark-blue mt-4 text-primary">AXIAL ISOLATION & HIPPS VALVES</h2>
+      <p class="text-muted mx-auto" style="max-width: 700px;"> 
+        Material Grade: Carbon steel, Stainless steel, Dupex, 
+        Super Duplex, low-high Alloy, Nickel alloy, Titanium 
+        alloy .
+
+</p>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-4 mb-4"
+        onclick="document.getElementById('rewindingService').scrollIntoView({ behavior: 'smooth' });">
+        <div class="card service-card">
+          <img src="images/valvesDivision/hippsValve1.jpg" class="card-img-top" alt="Web Development">
+
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card service-card">
+          <img src="images/valvesDivision/hippsValve2.jpg" class="card-img-top" alt="Web Development">
+
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card service-card">
+          <div class="container my-4">
+
+
+
+
+            <h2 class="display-6 text-primary p-4">SPECIALIZED SERVICES</h2>
+
+            <p class="pl-4">
+              We offer a wide range of industrial services including
+              <b>Hot Tapping and Line Stopple</b>,
+              <b>Under Pressure Leak Sealing</b>,
+              <b>Online Safety Relief Valve Testing</b>,
+              and <b>Onsite Machining</b>.
+              Our expertise also covers <b>Passive Fire Protection</b>,
+              <b>Online Retrieval and Corrosion Monitoring</b>,
+              <b>Online Valve Maintenance</b>,
+              and <b>Pipe Freezing</b> to ensure safe and efficient plant operations.
+            </p>
+
+            <h2 class="display-6 text-primary  pl-4">Ready to Start Your Project?</h2>
+            <p class="pl-4">Contact our team today to discuss how FUTURION can help with your engineering and technical
+              needs.</p>
+       </div>
+
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card service-card h-100" style="background-color: #e8f1ff; border-left: 5px solid #276ef1;">
+
+          <h2 class="display-6 text-primary p-4"><b>Technical Specification</b></h2>
+          <p class="px-4 lead" style="font-size: 18px;">
+The <b>valve system</b> is equipped for <b>emergency shutdown (ESD)</b> operations, ensuring rapid isolation during critical events. It provides <b>safety shutoff</b> functionality to protect equipment and personnel, along with <b>over pressure protection (HIPPS)</b> to maintain system integrity and prevent hazardous overpressure conditions in industrial applications.   </p>
+</div>
+      </div>
+
+      <div class="col-md-4 mb-4">
+        <div class="card service-card h-100"
+          style="background-color: #e8f1ff; border-right: 5px solid #276ef1; padding-left: 16px;">
+
+          <p class="p-4 lead" style="font-size: 16px;">
+            <i class="bi bi-check-circle feature-icon display-5"></i><br /><br />
+          <ul class="list-unstyled ">
+            <li>💙 Valves & Isolation Kits, Gaskets, Studs</li>
+            <li>💙 Reactors and Columns & Pipes</li>
+            <li>💙 Fittings, Olets and Flangeolets</li>
+            <li>💙 Instrumentation Valves & Strainers</li>
+            <li>💙 Corrosion Monitoring System</li>
+            <li>💙 Heat Exchangers / Pressure Vessels</li>
+            <li>💙 Branch Fittings</li>
+            <li>💙 Expansion Joints / Bellows</li>
+            <li>💙 Orifice Plates, Orifice flange</li>
+            <li>💙 Potable Water Valves and pumps</li>
+            <li>💙 CPVC Fittings, valves, strainers</li>
+            <li>💙 Spectacle blinds and Spades</li>
+
+          </ul>
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4 mb-4">
+        <div class="py-5 text-center text-white h-100" style="background: linear-gradient(to right, #2563eb, #1e40af);">
+          <div class="container">
+            <h4 class="mb-4 size-12" style="font-size: 2rem;">
+              Purpose of  Hipps valves
+            </h4>
+            <p class="lead mb-5 mx-auto" style="max-width: 600px; color: #dbeafe;">
+                Purpose: Axial Isolation valve are used in highly 
+                demanding application where tight shut off, high 
+                reliability and fast opening/Closing are desired.    
+                Application: Hydro carbon, energy, and process 
+                industries, Axial isolation valves are used in a diversity 
+                of liquid, gas and multi-phase fluid application.
+                Size Range: 2" ~ 48"  
+                Class Rating: 150CL ~ 2500CL, API 3000PSI - 15000 PS
+            </p>
+            <div class="d-flex flex-column flex-sm-row justify-content-center align-items-center">
+              <a href="#" class="btn btn-light btn-lg text-primary font-weight-bold px-4 py-2 mb-3 mb-sm-0 mr-sm-3">
+                Get Free Consultation
+              </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+  </div>
 </section>
 
 
