Fand updated head

--- a/fans.html
+++ b/fans.html
@@ -236,14 +236,13 @@
         </video>
         <div class="video-overlay-content text-center" style="margin-top: -60px;">
             <h1 class="homepage-header font-weight-bold display-4 display-md-3 display-lg-2">
-                Industrial-valves
+                Commercial fans
             </h1>
             <p class="homepage-pg text-white lead">
-                Delivering high-performance Industrial-valves from trusted global brands—designed to support innovation,
-                efficiency, and long-term value.
+We offer an extensive range of fans and blowers, from large ventilation fans for large-scale commercial facilities, underground parking lots, subway stations and factories, to small fans for kitchens, and set fans that can be incorporated into industrial equipment.
             </p>
             <a href="#services" class="btn explore-btn">
-                Explore Our Industrial-valves <i class="fas fa-arrow-right ml-2"></i>
+                Commercial fans <i class="fas fa-arrow-right ml-2"></i>
             </a>
         </div>
 
@@ -272,10 +271,7 @@
             <div class="text-center mb-5 ">
                 <h2 class="text-center font-weight-bold text-dark-blue mt-4 text-primary">Industrial fans</h2>
                 <p class="text-muted mx-auto" style="max-width: 700px;">
-                    General air supply and exhaust
-                    Air conditioning and ventilation
-                    Air supply/exhaust
-                    Air-conditioning</p>
+We offer an extensive range of fans and blowers, from large ventilation fans for large-scale commercial facilities, underground parking lots, subway stations and factories, to small fans for kitchens, and set fans that can be incorporated into industrial equipment.</p>
             </div>
 
 
