--- a/electrical-products.html
+++ b/electrical-products.html
@@ -364,7 +364,7 @@
     <a class="dropdown-item" href="vacuum-pumps.html">Vacuum Pumps & System</a>
     <a class="dropdown-item" href="water-wastewater-valves.html">Water & Waste Water Valves</a>
     <a class="dropdown-item" href="industrial-valves.html">Industrial Valves</a>
-    <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a>
+    <!-- <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a> -->
     <a class="dropdown-item" href="fans.html">Fans</a>
     <a class="dropdown-item" href="electrical-products.html">Electrical Products</a>
     <a class="dropdown-item" href="metallic-piping-products.html">Metallic Piping Products</a>
@@ -373,27 +373,8 @@
   </div>
 </li>
 
-      <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-      <!-- Services Dropdown -->
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Services
-        </a>
-        <div class="dropdown-menu" aria-labelledby="servicesDropdown">
-          <a class="dropdown-item" href="service.html">Repairing & Rewinding</a>
-          <a class="dropdown-item" href="inhouse.html">in House Mechine Shop</a>
-          <a class="dropdown-item" href="dynamic-balancing.html">Dynamic Balancing</a>
-          <a class="dropdown-item" href="electric-testing.html">Electric Testing</a>
-          <a class="dropdown-item" href="modifications.html">Modification & Trouble Shooting</a>   
-          <a class="dropdown-item" href="compressor-services.html">compressor-services</a>                     
-          <a class="dropdown-item" href="laser-alignment.html">laser-alignment</a>                     
-          <a class="dropdown-item" href="industrial-gearbox-repair.html">industrial-gearbox-repair</a>                     
-          <a class="dropdown-item" href="hvacRepair.html">HVAC Repair & Retrofit Services</a>
-          <a class="dropdown-item" href="mechanicalContracting.html">Mechanical Contracting </a>
-          <a class="dropdown-item" href="turnkey.html">Turnkey MEP Contracting</a>
-          <a class="dropdown-item" href=" drop-test-dc-motor.html"> Drop-test-dc-motor</a> 
-        </div>
-      </li> -->
+      <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+
       <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
     </ul>
   </div>
