--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
   <!-- Navbar -->
-<nav class="navbar navbar-expand-lg pl-3 nv-bg" style="background-color: ##020f3b;">
+<nav class="navbar navbar-expand-lg pl-3 nv-bg" style="background-color: #020f3b;">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" alt="FUTURION logo" style="height: 40px;">
   </a>
@@ -60,7 +60,7 @@
     <a class="dropdown-item" href="vacuum-pumps.html">Vacuum Pumps & System</a>
     <a class="dropdown-item" href="water-wastewater-valves.html">Water & Waste Water Valves</a>
     <a class="dropdown-item" href="industrial-valves.html">Industrial Valves</a>
-    <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a>
+    <!-- <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a> -->
     <a class="dropdown-item" href="fans.html">Fans</a>
     <a class="dropdown-item" href="electrical-products.html">Electrical Products</a>
     <a class="dropdown-item" href="metallic-piping-products.html">Metallic Piping Products</a>
@@ -69,27 +69,8 @@
   </div>
 </li>
 
-      <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-      <!-- Services Dropdown -->
-      <!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Services
-        </a>
-        <div class="dropdown-menu" aria-labelledby="servicesDropdown">
-          <a class="dropdown-item" href="service.html">Repairing & Rewinding</a>
-          <a class="dropdown-item" href="inhouse.html">in House Mechine Shop</a>
-          <a class="dropdown-item" href="dynamic-balancing.html">Dynamic Balancing</a>
-          <a class="dropdown-item" href="electric-testing.html">Electric Testing</a>
-          <a class="dropdown-item" href="modifications.html">Modification & Trouble Shooting</a>   
-          <a class="dropdown-item" href="compressor-services.html">compressor-services</a>                     
-          <a class="dropdown-item" href="laser-alignment.html">laser-alignment</a>                     
-          <a class="dropdown-item" href="industrial-gearbox-repair.html">industrial-gearbox-repair</a>                     
-          <a class="dropdown-item" href="hvacRepair.html">HVAC Repair & Retrofit Services</a>
-          <a class="dropdown-item" href="mechanicalContracting.html">Mechanical Contracting </a>
-          <a class="dropdown-item" href="turnkey.html">Turnkey MEP Contracting</a>
-          <a class="dropdown-item" href=" drop-test-dc-motor.html"> Drop-test-dc-motor</a> 
-        </div>
-      </li> -->
+      <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+
       <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
     </ul>
   </div>
@@ -116,11 +97,7 @@
     </div> 
  
  
- <!-- <div class="text-center eox mt-4">
-  <a href="#services" class="btn explore-btn">
-    Explore Our Services <i class="fas fa-arrow-right ml-2"></i>
-  </a>
-</div> -->
+
 
   </div>
 
@@ -270,13 +247,7 @@
     <!-- Loop through 5 rows -->
     <!-- Each row contains 12 columns -->
     <div class="row no-gutters">
-      <!-- Loop from 1 to 60 -->
-      <!-- Example for brand #1 to #12 -->
-      <!-- Repeat the below block 60 times with different image numbers -->
-      <!-- To avoid overlap: add padding and center image -->
-      <!-- Each column gets 1/12 width on large screens -->
-      <!-- 'py-3' gives vertical breathing space -->
-      <!-- 'px-2' gives horizontal spacing -->
+
       <div class="col-6 col-sm-4 col-md-2 col-lg-2 px-2 py-2  d-flex align-items-center justify-content-center">
         <div class="bg-white p-2 rounded shadow-sm w-100 d-flex align-items-center justify-content-center" style="height: 100px;">
           <img src="images/brandsFutorion/2.jpg" alt="Brand 1" style="max-height: 70px; max-width: 100%; object-fit: contain;" />
@@ -655,63 +626,6 @@
 </section>
 
 
-
-<!-- <section class="brand text-center py-5">
-  <div class="container">
-    <h2 class="font-weight-bold text-primary">Our Trusted Brands</h2>
-    <p class="text-muted">We work with over 100 leading brands to deliver quality products and solutions</p>
-    <div style="width: 80px; height: 4px; background-color: #1662f6; margin: 15px auto 40px;"></div>
-
-
-<div class="marquee-wrapper mb-4">
-  <div class="marquee-inner">
-    <div class="marquee-content">
-      <img src="images/brand1[1].png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand2[1].png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand3.png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand6.png" alt="Brand 3" class="img-fluid brand-logo">
-        <img src="images/brand7.png" alt="Brand 4" class="img-fluid brand-logo">
-        <img src="images/brand8.png" alt="Brand 5" class="img-fluid brand-logo">
-        <img src="images/brand9.png" alt="Brand 1" class="img-fluid brand-logo">
-
-    </div>
-    <div class="marquee-content">
-
-      <img src="images/brand4.png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand5.png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand6.png" class="img-fluid brand-logo" alt="">
-       <img src="images/brand1[1].png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand2[1].png" class="img-fluid brand-logo" alt="">
-      <img src="images/brand3.png" class="img-fluid brand-logo" alt="">
-    </div>
-  </div>
-</div>
-
-
-
-    <div class="marquee-wrapper">
-      <div class="marquee-inner reverse ">
-        <img src="images/brand6.png" alt="Brand 3" class="img-fluid brand-logo">
-        <img src="images/brand7.png" alt="Brand 4" class="img-fluid brand-logo">
-        <img src="images/brand8.png" alt="Brand 5" class="img-fluid brand-logo">
-        <img src="images/brand9.png" alt="Brand 1" class="img-fluid brand-logo">
-        <img src="images/brand3.png" alt="Brand 2" class="img-fluid brand-logo">
-
-        <img src="images/brand3.png" alt="Brand 3" class="img-fluid brand-logo">
-        <img src="images/brand4.png" alt="Brand 4" class="img-fluid brand-logo">
-                <img src="images/brand6.png" alt="Brand 3" class="img-fluid brand-logo">
-        <img src="images/brand7.png" alt="Brand 4" class="img-fluid brand-logo">
-        <img src="images/brand8.png" alt="Brand 5" class="img-fluid brand-logo">
-        <img src="images/brand9.png" alt="Brand 1" class="img-fluid brand-logo">
-        <img src="images/brand3.png" alt="Brand 2" class="img-fluid brand-logo">
-
-        <img src="images/brand3.png" alt="Brand 3" class="img-fluid brand-logo">
-        <img src="images/brand4.png" alt="Brand 4" class="img-fluid brand-logo">
-      </div>
-    </div>
-
-  </div>
-</section> -->
 
 
 <!-- Home footer -->
