--- a/metallic-piping-products.html
+++ b/metallic-piping-products.html
@@ -243,35 +243,38 @@
 <body>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg nv-bg" style="background-color: #020f3b;">
+<nav class="navbar navbar-expand-lg pl-3 nv-bg" style="background-color: #020f3b;">
   <a class="navbar-brand" href="#">
     <img src="images/logo.png" alt="FUTURION logo" style="height: 40px;">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+      <!-- <li class="nav-item"><a class="nav-link" href="products.html">Product</a></li> -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownProducts" role="button" data-toggle="dropdown">
-          Products
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts">
-          <a class="dropdown-item" href="water-wastewater-pumps.html">Water & Wastewater Pumps</a>
-          <a class="dropdown-item" href="industrial-water-pumps.html">Industrial Water Pumps</a>
-          <a class="dropdown-item" href="vacuum-pumps.html">Vacuum Pumps & System</a>
-          <a class="dropdown-item" href="water-wastewater-valves.html">Water & Waste Water Valves</a>
-          <a class="dropdown-item" href="industrial-valves.html">Industrial Valves</a>
-          <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a>
-          <a class="dropdown-item" href="fans.html">Fans</a>
-          <a class="dropdown-item" href="electrical-products.html">Electrical Products</a>
-          <a class="dropdown-item" href="metallic-piping-products.html">Metallic Piping Products</a>
-          <a class="dropdown-item" href="frp-grp-piping.html">FRP/GRP Piping</a>
-          <a class="dropdown-item" href="hdpe-cpvc-upvc-piping.html">HDPE/CPVC/UPVC Piping Solutions</a>
-        </div>
-      </li>
-      <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+  <a class="nav-link dropdown-toggle" href="products.html" id="navbarDropdownProducts" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Products
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdownProducts">
+    <a class="dropdown-item" href="water-wastewater-pumps.html">Water & Wastewater Pumps</a>
+    <a class="dropdown-item" href="industrial-water-pumps.html">Industrial Water Pumps</a>
+    <a class="dropdown-item" href="vacuum-pumps.html">Vacuum Pumps & System</a>
+    <a class="dropdown-item" href="water-wastewater-valves.html">Water & Waste Water Valves</a>
+    <a class="dropdown-item" href="industrial-valves.html">Industrial Valves</a>
+    <!-- <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a> -->
+    <a class="dropdown-item" href="fans.html">Fans</a>
+    <a class="dropdown-item" href="electrical-products.html">Electrical Products</a>
+    <a class="dropdown-item" href="metallic-piping-products.html">Metallic Piping Products</a>
+    <a class="dropdown-item" href="frp-grp-piping.html">FRP/GRP Piping</a>
+    <a class="dropdown-item" href="hdpe-cpvc-upvc-piping.html">HDPE/CPVC/UPVC Piping Solutions</a>
+  </div>
+</li>
+
+      <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+
       <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
     </ul>
   </div>
