Contact Us Form

--- a/about.html
+++ b/about.html
@@ -536,7 +536,7 @@
             <a class="dropdown-item" href="vacuum-pumps.html">Vacuum Pumps & System</a>
             <a class="dropdown-item" href="water-wastewater-valves.html">Water & Waste Water Valves</a>
             <a class="dropdown-item" href="industrial-valves.html">Industrial Valves</a>
-            <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a>
+            <!-- <a class="dropdown-item" href="non-metallic-valves.html">Non Metallic Valves</a> -->
             <a class="dropdown-item" href="fans.html">Fans</a>
             <a class="dropdown-item" href="electrical-products.html">Electrical Products</a>
             <a class="dropdown-item" href="metallic-piping-products.html">Metallic Piping Products</a>
